--- a/supabase/index.html
+++ b/supabase/index.html
@@ -211,10 +211,42 @@
                 <tr class="text-left bg-slate-100">
                   <th class="p-2">업체명</th>
                   <th class="p-2">주문자 수</th>
+                  <th class="p-2">상세 보기</th>
                 </tr>
               </thead>
               <tbody id="dailyVendors" class="divide-y divide-slate-100"></tbody>
             </table>
+          </div>
+
+          <!-- 상세 보기 모달 -->
+          <div id="detailModal" class="fixed inset-0 bg-black/50 backdrop-blur-sm z-50 hidden items-center justify-center">
+            <div class="bg-white rounded-2xl shadow-2xl max-w-2xl w-full mx-4 max-h-[90vh] overflow-hidden flex flex-col">
+              <!-- 모달 헤더 -->
+              <div class="bg-gradient-to-r from-brand to-brand-dark text-white p-6">
+                <div class="flex justify-between items-start">
+                  <div>
+                    <h2 id="modalVendorName" class="text-2xl font-bold mb-1">업체명</h2>
+                    <p id="modalDate" class="text-brand-light">날짜</p>
+                  </div>
+                  <button id="closeModal" class="text-white hover:text-slate-200 text-2xl font-bold w-8 h-8 flex items-center justify-center rounded-full hover:bg-white/20 transition">×</button>
+                </div>
+              </div>
+              
+              <!-- 모달 본문 -->
+              <div class="p-6 overflow-y-auto flex-1">
+                <div class="mb-4">
+                  <p class="text-sm text-slate-600 mb-4">주문자 목록</p>
+                  <div id="modalUserList" class="space-y-2">
+                    <!-- 주문자 이름들이 여기에 표시됩니다 -->
+                  </div>
+                </div>
+              </div>
+              
+              <!-- 모달 푸터 -->
+              <div class="border-t border-slate-200 p-4 flex justify-end">
+                <button id="closeModalBtn" class="px-6 py-2 bg-slate-200 text-slate-700 rounded-lg hover:bg-slate-300 transition font-medium">닫기</button>
+              </div>
+            </div>
           </div>
           <!-- 직원 계정 관리 -->
           <div class="bg-white rounded-xl shadow p-6 hidden" id="employeesPanel" data-panel="employees">
