Feature: Add total orderer count to modal header

--- a/supabase/index.html
+++ b/supabase/index.html
@@ -226,7 +226,8 @@
                 <div class="flex justify-between items-start">
                   <div>
                     <h2 id="modalVendorName" class="text-2xl font-bold mb-1">업체명</h2>
-                    <p id="modalDate" class="text-brand-light">날짜</p>
+                    <p id="modalDate" class="text-brand-light mb-2">날짜</p>
+                    <p id="modalTotalCount" class="text-lg font-semibold">총 0명</p>
                   </div>
                   <button id="closeModal" class="text-white hover:text-slate-200 text-2xl font-bold w-8 h-8 flex items-center justify-center rounded-full hover:bg-white/20 transition">×</button>
                 </div>
