Feature: Add Excel download with two sheets - pivot table and raw data (name, date, vendor)

--- a/supabase/index.html
+++ b/supabase/index.html
@@ -6,6 +6,7 @@
   <title>도시락 시스템 (Supabase)</title>
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🍱</text></svg>">
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
   <script>
     tailwind.config = { theme: { extend: { colors: { brand: { DEFAULT: '#2563eb', dark: '#1d4ed8' }}}}};
   </script>
