Feature: Add 'Save ID' checkbox to login form with localStorage persistence

--- a/supabase/index.html
+++ b/supabase/index.html
@@ -43,6 +43,10 @@
             <label class="block text-sm text-slate-600 mb-1">비밀번호</label>
             <input id="loginPassword" type="password" placeholder="비밀번호" class="w-full border rounded px-3 py-2" autocomplete="current-password">
           </div>
+          <div class="flex items-center gap-2">
+            <input type="checkbox" id="saveId" class="w-4 h-4 text-brand border-slate-300 rounded focus:ring-brand">
+            <label for="saveId" class="text-sm text-slate-600 cursor-pointer">아이디 저장</label>
+          </div>
           <button id="loginBtn" class="w-full px-4 py-2 bg-brand text-white rounded hover:bg-brand-dark">로그인</button>
         </div>
         <div id="devModeButtons" class="hidden space-y-2 pt-3 border-t">
