吏곸썝 ?붾㈃ 媛쒖꽑: 吏???좎쭨 議고쉶 媛?? 留덇컧?쒓컙 泥댄겕, ?대쾲 ??二쇰Ц ?듦퀎 異붽?
- ??二쇰Ц 議고쉶?먯꽌 吏???좎쭨??議고쉶 媛?ν븯?꾨줉 ?섏젙
- 留덇컧?쒓컙 ?댄썑 二쇰Ц ?섏젙/痍⑥냼 遺덇? 泥섎━
- 痍⑥냼 遺덇? 二쇰Ц? 踰꾪듉 ????ъ쑀 ?쒖떆
- ?대쾲 ??二쇰Ц ?듦퀎 ?뱀뀡 異붽? (珥?二쇰Ц 媛쒖닔, ?낆껜蹂?二쇰Ц ?꾪솴)
- 二쇰Ц/痍⑥냼 ???듦퀎 ?먮룞 ?덈줈怨좎묠

--- a/supabase/index.html
+++ b/supabase/index.html
@@ -179,6 +179,23 @@
               <!-- 모바일: 카드 형태 - 개선된 디자인 -->
               <div id="myOrdersBodyMobile" class="sm:hidden space-y-3"></div>
             </div>
+
+            <!-- 이번 달 주문 통계 섹션 -->
+            <div class="mt-8 pt-6 border-t border-slate-200/60">
+              <div class="mb-6">
+                <h4 class="font-bold text-lg sm:text-xl text-slate-800 mb-2 flex items-center gap-2">
+                  <span class="w-1 h-6 bg-gradient-to-b from-brand to-brand-dark rounded-full"></span>
+                  이번 달 주문 통계
+                </h4>
+                <p class="text-xs text-slate-500">이번 달 주문 내역을 업체별로 확인할 수 있습니다</p>
+              </div>
+              
+              <div class="bg-white/80 backdrop-blur-sm rounded-xl p-6 shadow-sm border border-slate-100">
+                <div id="monthlyStats" class="space-y-4">
+                  <div class="text-center py-8 text-slate-500">로딩 중...</div>
+                </div>
+              </div>
+            </div>
           </div>
 
           <!-- 일괄 주문 관리 -->
